# ivory

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/getting_started/: CMakeLists.txt  shader.cpp  triangle.cpp  window.cpp
include/ivory/: assert.h  opengl.h  shader_utils.h  window.h  window_manager.h
shaders/: basic.fs  basic_color.frag
src/: shader_utils.cpp  window.cpp  window_manager.cpp
